# roost

./: .env  Cargo.toml  bacon.toml  config.toml  docker-compose.yml
client/: .gitignore  Dockerfile.dev  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
client/app/components/: Album.vue  Player.vue  SidebarMenuItem.vue
client/app/composables/: useApi.ts
client/app/layouts/: default.vue
client/app/pages/albums/: [id].vue  index.vue
client/app/stores/: usePlayerStore.ts
client/app/types/: colorthief.d.ts  roost.d.ts
client/app/utils/: asset.ts
migrations/2025-12-19-171631-0000_create_albums/: down.sql  up.sql
migrations/2025-12-22-130839-0000_create_tracks_table/: down.sql  up.sql
migrations/2025-12-26-144439-0000_add_media_table/: down.sql  up.sql
src/: directory_reader.rs  filesystem.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: album_controller.rs  index_controller.rs  mod.rs  source_controller.rs  track_controller.rs
src/reader/: input_track.rs  mod.rs  mp3.rs  track.rs
