[package]
name = "roost"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
diesel = { version = "2.3.5", features = ["postgres"] }
dotenvy = "0.15.7"
flac = "0.5.0"
gents = "1.0"
gents_derives = "1.0"
id3 = "1.16.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8",  features = ["fs", "trace", "cors"] }

[dev-dependencies]
gents = "1.0"
gents_derives = "1.0"
